--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,6 +5,8 @@
     <form method="post">
         <textarea name="text" id="text" cols="50" rows="5" placeholder="Enter a text to fact check..."></textarea>
         <br />
+        <label for="nkeywords">Number of keywords to keep: </label>
+        <input name="nkeywords" id="nkeywords" type="text"/>
         <input type="submit"/>
     </form>
 
