--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,6 +1,16 @@
-html { font-family: sans-serif; padding: 1rem; background-color: #005651}
+html { font-family: sans-serif; padding: 1rem; background-color: #005651; }
 body { max-width: 960px; margin: 0 auto; background-color: transparent; }
-button {margin: 15px auto; float: none}
-.card {margin: 15px auto ; float: none; margin-bottom: 20px;}
+.container {
+    position:absolute;
+    top:50%;
+    left:50%;
+    padding:15px;
+    -ms-transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
+}
+.thumbnail {max-width: 600px; padding: 20px;}
 table {text-align: center; }
-h5.card-title {color: snow; text-align: center; }
+h3.title {color: #192a3d; text-align: center; font-weight: bold;}
+label {color: #192a3d;}
+.btn {max-width: 200px; margin: 15px auto; float: none; }
