--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,17 +1,68 @@
 {% extends 'base.html' %}
 
+{% block css %}
+<link href="{{ url_for('static', filename='css/bootstrap-datetimepicker.min.css') }}" rel="stylesheet" media="screen">
+{% endblock %}
+
 {% block body %}
 
-    <div class="card bg-dark" style="width: 18rem;">
-        <div class="card-body">
-            <form method="post">
-                <div class="form-group">
-                    <h5 class="card-title">Fact Checking Tool</h5>
-                    <textarea class="form-control" name="text" id="text" cols="50" rows="5" placeholder="Enter a text to fact check..."></textarea>
+    <div class="container">
+        <div class="row">
+            <div class="thumbnail">
+                <form method="post">
+                    <fieldset>
+                        <div class="form-group">
+                            <h3 class="title">Fact Checking Tool</h3>
+                            <textarea class="form-control" name="text" id="text" cols="50" rows="5" placeholder="Enter a text to fact check..."></textarea>
+                        </div>
+                    </fieldset>
+                    <div class="row">
+                        <fieldset class="col-sm-6">
+                            <div class="form-group">
+                                <label for="dtp_input2" class="control-label">Start Date</label>
+                                <div class="input-group date form_date" data-date="" data-date-format="yyyy-mm-dd" data-link-field="dtp_input2" data-link-format="yyyy-mm-dd">
+                                    <input class="form-control" id="start_date" size="16" type="text" value="" readonly>
+                                    <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
+                                    <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+                                </div>
+                                <input type="hidden" id="dtp_input2" value="" /><br/>
+                            </div>
+                        </fieldset>
+                        <fieldset class="col-sm-6">
+                            <div class="form-group">
+                                <label for="dtp_input2" class="control-label">End Date</label>
+                                <div class="input-group date form_date" data-date="" data-date-format="yyyy-mm-dd" data-link-field="dtp_input2" data-link-format="yyyy-mm-dd">
+                                    <input class="form-control" id="end_date" size="16" type="text" value="" readonly>
+                                    <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
+                                    <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+                                </div>
+                                <input type="hidden" id="dtp_input2" value="" /><br/>
+                            </div>
+                        </fieldset>
+                    </div>
                     <button type="submit" class="btn btn-primary btn-block">Submit</button>
-                </div>
-            </form>
+                </form>
+            </div>
         </div>
     </div>
+    </div>
+
+{% endblock %}
+
+{% block scripts %}
+    <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap-datetimepicker.js') }}" charset="UTF-8"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/locales/bootstrap-datetimepicker.fr.js') }}" charset="UTF-8"></script>
+    <script type="text/javascript">
+        $('.form_date').datetimepicker({
+            language:  'en',
+            weekStart: 1,
+            todayBtn:  1,
+            autoclose: 1,
+            todayHighlight: 1,
+            startView: 2,
+            minView: 2,
+            forceParse: 0
+        });
+    </script>
 
 {% endblock %}
