--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,8 +10,10 @@
 
     </head>
     <body>
-        <div class="container-fluid">
+        <div class="container">
+            <div class="row">
             {% block body %}{% endblock %}
+            </div>
         </div>
 
         <script src="{{ url_for('static', filename='jquery/jquery-3.3.1.min.js') }}" charset="UTF-8"></script>
