--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -4,18 +4,39 @@
 
 {% block body %}
 
-    <div class="well">
-        <table class="table table-hover table-responsive" id="results-table">
-            <thead><tr><th>Keyword</th><th>Score</th></tr></thead>
-            <tbody>
-                {% for keyword, score in predictions %}
-                    <tr>
-                        <td>{{ keyword }}</td>
-                        <td>{{ '%0.2f'|format(score|float) }}</td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+    <div class="row">
+        <div class="well">
+            <div class=caption>
+                <h3>Your search:</h3>
+                <p>{{ query }}</p>
+            </div>
+            <table class="table table-hover table-responsive" id="results-table">
+                <thead><tr><th>Keyword</th><th>Score</th></tr></thead>
+                <tbody>
+                    {% for keyword, score in predictions %}
+                        <tr>
+                            <td>{{ keyword }}</td>
+                            <td>{{ '%0.2f'|format(score|float) }}</td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <div class="row">
+        {% for article in search_results["articles"] %}
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+                <div class="thumbnail article">
+                    <h3>{{ article["source"]["name"] }}</h3>
+                    <h5 class="article-title">{{ article["title"] }}</h5>
+                    <a href="{{ article["url"] }}"><img class="article-image" src="{{ article["urlToImage"] }}"></a>
+                    <div class="caption">
+                        <p class="description">{{ article["description"] }}</p>
+                        <p>{{ article["publishedAt"] }}</p>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
     </div>
 
 {% endblock %}
