--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -24,19 +24,23 @@
         </div>
     </div>
     <div class="row">
-        {% for article in search_results["articles"] %}
-            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-                <div class="thumbnail article">
-                    <h3>{{ article["source"]["name"] }}</h3>
-                    <h5 class="article-title">{{ article["title"] }}</h5>
-                    <a href="{{ article["url"] }}"><img class="article-image" src="{{ article["urlToImage"] }}"></a>
-                    <div class="caption">
-                        <p class="description">{{ article["description"] }}</p>
-                        <p>{{ article["publishedAt"] }}</p>
+        {% if search_results["articles"] %}
+            {% for article in search_results["articles"] %}
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+                    <div class="thumbnail article">
+                        <h3>{{ article["source"]["name"] }}</h3>
+                        <h5 class="article-title">{{ article["title"] }}</h5>
+                        <a href="{{ article["url"] }}"><img class="article-image" src="{{ article["urlToImage"] }}"></a>
+                        <div class="caption">
+                            <p class="description">{{ article["description"] }}</p>
+                            <p>{{ article["publishedAt"] }}</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-        {% endfor %}
+            {% endfor %}
+        {% else %}
+            <h2 class="missed">Search yielded no results !</h2>
+        {% endif %}
     </div>
 
 {% endblock %}
