Interface and query updates
Interface: Updated web page, results shown on the home page, general design

api.py: Results of api query are separated by political affiliation

ToDo: Prioritise results based on relevance to the query

--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -30,7 +30,7 @@
                     <div class="thumbnail article">
                         <h3>{{ article["source"]["name"] }}</h3>
                         <h5 class="article-title">{{ article["title"] }}</h5>
-                        <a href="{{ article["url"] }}"><img class="article-image" src="{{ article["urlToImage"] }}"></a>
+                        <a href="{{ article["url"] }}"><img class="article-image" src="{{ article['urlToImage'] }}"></a>
                         <div class="caption">
                             <p class="description">{{ article["description"] }}</p>
                             <p>{{ article["publishedAt"] }}</p>
