loop through results instead of hardcoded key values

--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -1,64 +1,32 @@
 
+{% if "totalResults" in search_results %}
 
-<div class="col-md-3" style="">
-    <h5 class="text-center border-secondary border-bottom">Left</h5>
-    <div class="row ml-3 mr-1">
-        {% if search_results["left"] %}
-            {% for article in search_results["left"] %}
-                <div class="thumbnail article">
-                    <h3>{{ article["source"]["name"] }}</h3>
-                    <h5 class="article-title">{{ article["title"] }}</h5>
-                    <a href="{{ article['url'] }}">
-                        <img class="article-image img-fluid float-left"  src="{{ article['urlToImage'] }}"></a>
-                    <div class="caption">
-                        <p class="description">{{ article["description"] }}</p>
-                        <p>{{ article["publishedAt"] }}</p>
+    <h2 class="missed">Search yielded no results !</h2>
+
+{% else %}
+
+    {% for political_leaning, results in search_results.items() %}
+
+        <div class="col-md-3" style="">
+            <h5 class="text-center border-secondary border-bottom">{{ political_leaning.title() }}</h5>
+            <div class="row ml-3 mr-1">
+
+                {% for article in results %}
+                    <div class="thumbnail article">
+                        <h3>{{ article["source"]["name"] }}</h3>
+                        <h5 class="article-title">{{ article["title"] }}</h5>
+                        <a href="{{ article['url'] }}">
+                            <img class="article-image img-fluid float-left"  src="{{ article['urlToImage'] }}"></a>
+                        <div class="caption">
+                            <p class="description">{{ article["description"] }}</p>
+                            <p>{{ article["publishedAt"] }}</p>
+                        </div>
                     </div>
-                </div>
-            {% endfor %}
-        {% else %}
-            <h2 class="missed">Search yielded no results !</h2>
-        {% endif %}
-    </div>
-</div>
-<div class="col-md-3" style="">
-    <h5 class="text-center border-secondary border-bottom">Centre</h5>
-    <div class="row ml-3 mr-1">
-        {% if search_results["centre"] %}
-        {% for article in search_results["centre"] %}
-            <div class="thumbnail article">
-                <h3>{{ article["source"]["name"] }}</h3>
-                <h5 class="article-title">{{ article["title"] }}</h5>
-                <a href="{{ article['url'] }}"><img class="article-image img-fluid float-left"  src="{{ article['urlToImage'] }}"></a>
-                <div class="caption">
-                    <p class="description">{{ article["description"] }}</p>
-                    <p>{{ article["publishedAt"] }}</p>
-                </div>
-            </div>
-        {% endfor %}
-        {% else %}
-        <h2 class="missed">Search yielded no results !</h2>
-        {% endif %}
-    </div>
-</div>
+                {% endfor %}
 
-<div class="col-md-3" style="">
-    <h5 class="text-center border-secondary border-bottom">Right</h5>
-    <div class="row ml-3 mr-1">
-        {% if search_results["right"] %}
-        {% for article in search_results["right"] %}
-            <div class="thumbnail article">
-                <h3>{{ article["source"]["name"] }}</h3>
-                <h5 class="article-title">{{ article["title"] }}</h5>
-                <a href="{{ article['url'] }}"><img class="article-image img-fluid float-left" src="{{ article['urlToImage'] }}"></a>
-                <div class="caption">
-                    <p class="description">{{ article["description"] }}</p>
-                    <p>{{ article["publishedAt"] }}</p>
-                </div>
             </div>
-        {% endfor %}
-        {% else %}
-        <h2 class="missed">Search yielded no results !</h2>
-        {% endif %}
-    </div>
-</div>
+        </div>
+
+    {% endfor %}
+
+{% endif %}
