fix margins and paddings

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,9 +4,8 @@
 
 {% include 'form.html' %}
 
-<div class="py-5">
-     <div class="container">
-        <div class="row ml-5 pl-5 w-100" >
+    <div class="container">
+        <div class="row my-5 py-2 w-100" >
 
             {% if search_results %}
 
@@ -17,8 +16,8 @@
                 <span></span>
 
             {% endif %}
+
         </div>
     </div>
-</div>
 
 {% endblock %}
