--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,19 +11,18 @@
 
 <body>
 <nav class="navbar navbar-light bg-secondary">
-    <div class="d-flex justify-content-center container-fluid"><a class="navbar-brand text-primary" href="#">
-        <b class="text-white"> BalancedView</b>
-    </a></div>
+    <div class="d-flex justify-content-center container-fluid">
+        <a class="navbar-brand text-primary" href="#"><b class="text-white"> BalancedView</b></a>
+    </div>
 </nav>
-<div class="py-5">
     <div class="container">
-        <div class="row">
+        <div class="row mt-3">
             <div class="col-md-12">
                 <h1 class="text-center text-secondary">Overcoming confirmation bias in social networks</h1>
             </div>
         </div>
     </div>
-</div>
+
  {% block body %}
  {% endblock %}
 
