--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -9,7 +9,7 @@
                     </div>
                 </fieldset>
             </div>
-            <div class="row">
+            <div class="row pl-2">
                 <fieldset class="col-md-6">
                     <div class="form-group">
                         <label for="dtp_input2" class="control-label">Start Date</label>
