add daterange validator for dates

--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -13,14 +13,14 @@
                 <fieldset class="col-md-6">
                     <div class="form-group">
                         <label for="dtp_input2" class="control-label">Start Date</label>
-                        {{ form.start_date(class='datepicker form-control', size="16", value="") }}
+                        {{ form.start_date(class='datepicker form-control', size="16") }}
                         {{ form.hidden_tag() }}<br>
                     </div>
                 </fieldset>
                 <fieldset class="col-md-6">
                     <div class="form-group">
                         <label for="dtp_input2" class="control-label">End Date</label>
-                        {{ form.end_date(class='datepicker form-control', size="16", value="") }}
+                        {{ form.end_date(class='datepicker form-control', size="16") }}
                         {{ form.hidden_tag() }}<br>
                     </div>
                 </fieldset>
