--- a/app/static/css/stylesheet.css
+++ b/app/static/css/stylesheet.css
@@ -9,3 +9,44 @@ body {
     position: absolute;
     bottom: 0;
   }
+
+div.chart{
+    font-family:sans-serif;
+    font-size:0.7em;
+}
+
+div.bar {
+    background-color:DarkRed;
+    color:white;
+    height:3em;
+    line-height:3em;
+    padding-right:1em;
+    margin-bottom:2px;
+    text-align:right;
+}
+
+circle {
+  fill: cadetblue;
+}
+line {
+  stroke: #ccc;
+}
+text {
+  text-anchor: middle;
+  font-family: "Helvetica Neue", Helvetica, sans-serif;
+  fill: #666;
+  font-size: 16px;
+}
+
+div.tooltip {	
+  position: absolute;			
+  text-align: center;			
+  width: 120px;					
+  height: 52px;					
+  padding: 4px;				
+  font: 12px sans-serif;		
+  background: lightsteelblue;	
+  border: 0px;		
+  border-radius: 8px;			
+  pointer-events: none;			
+}
