--- a/app/templates/graph.html
+++ b/app/templates/graph.html
@@ -4,7 +4,7 @@
 
 {% block head %}
 
-    <script src="{{ url_for('static', filename='d3/d3.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/d3.js') }}"></script>
     <script src="{{ url_for('static', filename='js/graph.js') }}"></script>
 {% endblock %}
 
