--- a/app/static/css/stylesheet.css
+++ b/app/static/css/stylesheet.css
@@ -4,30 +4,12 @@ body {
     margin: 0;
   }
   
-  footer {
-    width: 100%;
-    position: absolute;
-    bottom: 0;
-  }
-
-div.chart{
-    font-family:sans-serif;
-    font-size:0.7em;
+footer {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
 }
 
-div.bar {
-    background-color:DarkRed;
-    color:white;
-    height:3em;
-    line-height:3em;
-    padding-right:1em;
-    margin-bottom:2px;
-    text-align:right;
-}
-
-circle {
-  fill: cadetblue;
-}
 line {
   stroke: #ccc;
 }
@@ -37,7 +19,7 @@ text {
   fill: #666;
   font-size: 16px;
 }
-
+  
 div.tooltip {	
   position: absolute;			
   text-align: center;			
@@ -49,4 +31,47 @@ div.tooltip {
   border: 0px;		
   border-radius: 8px;			
   pointer-events: none;			
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+#display-graph {
+  text-align: right; 
+  width: 100%; 
+  color: red;
+  font-size: 1.3em;
 }
