--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -28,7 +28,7 @@
 
         <div class="container my-2">
 
-            <div class="row w-100" >
+            <div class="row w-100" id="graph-container">
                 {% include 'graph.html' %}
             </div>
             <div class="row my-5 py-2 w-100" >
