--- a/ui/templates/form.html
+++ b/ui/templates/form.html
@@ -1,6 +1,7 @@
 <div class="container my-2">
 
     <form method="post" class="w-100" action="#">
+        {{ form.csrf_token }}
         <div class="row">
             <div class="col-md-12">
                 <fieldset class="w-100">
