--- a/ui/templates/index.html
+++ b/ui/templates/index.html
@@ -3,7 +3,6 @@
 {% block title %}Index{% endblock %}
 
 {% block head %} 
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/ribbon.css') }}">
     <script src="{{ url_for('static', filename='js/d3.js') }}"></script>
     <script src="{{ url_for('static', filename='js/graph.js') }}"></script>
 {% endblock %}
@@ -12,16 +11,16 @@
 
     <nav class="navbar navbar-light bg-secondary">
         <div class="d-flex justify-content-center container-fluid">
-            <a class="navbar-brand text-primary" href="#"><b class="text-white"> BalancedView</b></a>
+            <a class="navbar-brand text-primary" href="#"><h1 class="text-white"> BalancedView</h1></a>
         </div>
-    </nav>
-    <div class="ribbon right orange">
-        <a href="https://github.com/qmeeus/balanced-view">Fork me on GitHub</a>
     </div>
+    </nav>
+    <a href="https://github.com/qmeeus/balanced-view"><img width="149" height="149" src="https://github.blog/wp-content/uploads/2008/12/forkme_right_orange_ff7600.png?resize=149%2C149" class="attachment-full size-full" alt="Fork me on GitHub" data-recalc-dims="1" style="position:fixed;top:0;right:0;border:0;z-index:2;"></a>
+
     <div class="container">
         <div class="row mt-3">
             <div class="col-md-12">
-                <h1 class="text-center text-secondary">Overcoming confirmation bias in social networks</h1>
+                <h2 class="text-center text-secondary">Overcoming confirmation bias in social networks</h2>
             </div>
         </div>
     </div>
