fix csp preventing external content + fix ribbon

--- a/ui/templates/index.html
+++ b/ui/templates/index.html
@@ -12,16 +12,17 @@
 
     <nav class="navbar navbar-light bg-secondary">
         <div class="d-flex justify-content-center container-fluid">
-            <a class="navbar-brand text-primary" href="#"><b class="text-white"> BalancedView</b></a>
+            <a class="navbar-brand text-primary" href="#"><h1 class="text-white"> BalancedView</h1></a>
         </div>
     </nav>
-    <div class="ribbon right orange">
+
+    <div class="ribbon">
         <a href="https://github.com/qmeeus/balanced-view">Fork me on GitHub</a>
     </div>
     <div class="container">
         <div class="row mt-3">
             <div class="col-md-12">
-                <h1 class="text-center text-secondary">Overcoming confirmation bias in social networks</h1>
+                <h2 class="text-center text-secondary">Overcoming confirmation bias in social networks</h2>
             </div>
         </div>
     </div>
