--- a/ui/static/css/ribbon.css
+++ b/ui/static/css/ribbon.css
@@ -1,95 +1,27 @@
-@import url(http://fonts.googleapis.com/css?family=Cabin+Condensed:500&text=Fork%20me%20on%20GitHub);
-
-body{
-  overflow-x: hidden;
-}
-
-.ribbon{
-  position: absolute; 
-  top: 42px;
-  width: 200px;
-  padding: 1px 0;
-  background: #000;
-  color: #eee;
-
-  -moz-box-shadow: 0 0 10px rgba(0,0,0,0.5);
-  -webkit-box-shadow: 0 0 10px rgba(0,0,0,0.5);
-  box-shadow: 0 0 10px rgba(0,0,0,0.5);
-}
-
-.ribbon.left{
-  left: -42px;
-  -moz-transform: rotate(-45deg);
-  -webkit-transform: rotate(-45deg);
-  -o-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-}
-
-.ribbon.right{
-  right: -42px;
-  -moz-transform: rotate(45deg);
-  -webkit-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
-
-.ribbon a, 
-.ribbon a:visited, 
-.ribbon a:active, 
-.ribbon a:hover{
-  display: block;
-  padding: 1px 0;
-  height: 24px;
-  line-height: 24px;
-
-  color: inherit;  
-  text-align: center;
-  text-decoration: none;
-  font-family: 'Cabin Condensed', sans-serif;
-  font-size: 16px;
-  font-weight: 500;
-
-  border: 1px solid rgba(255,255,255,0.3);
-
-  -moz-text-shadow: 0 0 10px rgba(0,0,0,0.31);
-  -webkit-text-shadow: 0 0 10px rgba(0,0,0,0.31);
-  text-shadow: 0 0 10px rgba(0,0,0,0.31);
-}
-
-.ribbon.black{
-  background: #000;
-}
-
-.ribbon.red{
-  background: #c00;
-}
-
-.ribbon.blue{
-  background: #09e;
-}
-
-.ribbon.green{
-  background: #0a0;
-}
-
-.ribbon.orange{
-  background: #d80;
-}
-
-.ribbon.purple{
-  background: #c0c;
-}
-
-.ribbon.grey{
-  background: #888;
-}
-
-.ribbon.white{
-  background: #eee;
-  color: black;
-}
-.ribbon.white a{
-  border: 2px dotted rgba(100,100,100,0.2);
+@media all and (min-width: 520px) {
+  .ribbon {
+    background-color: #F38419;
+    overflow: hidden;
+    white-space: nowrap;
+    position: absolute;
+    left: -50px;
+    top: 40px;
+    z-index: 9999;
+    -webkit-transform: rotate(-45deg);
+      -moz-transform: rotate(-45deg);
+        -ms-transform: rotate(-45deg);
+        -o-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+  }
+  .ribbon a {
+    border: 1px solid #faa;
+    color: #fff;
+    display: block;
+    font: bold 81.25% 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    margin: 1px 0;
+    padding: 10px 50px;
+    text-align: center;
+    text-decoration: none;
+    text-shadow: 0 0 5px #444;
+  }
 }
