--- a/ui/static/css/stylesheet.css
+++ b/ui/static/css/stylesheet.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Bangers");
+
 body {
     min-height: 100vh;
     position: relative;
@@ -19,7 +21,29 @@ text {
   fill: #666;
   font-size: 16px;
 }
-  
+
+h1 {
+  font-family: 'Bangers';
+  font-size: 10vw;
+  font-weight: bold;
+}
+
+h2 {
+  font-family: "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 6vw;
+  font-weight: bold;
+}
+
+@media all and (min-width: 520px) {
+  h1 {
+    font-size: 5vw;
+  }
+
+  h2{
+    font-size: 2vw;
+  }
+}
+
 div.tooltip {	
   position: absolute;			
   text-align: center;			
