--- a/ui/templates/form.html
+++ b/ui/templates/form.html
@@ -20,7 +20,7 @@
 
 
             </div>
-            <input type="submit" class="btn btn-block btn-secondary">
+            <input type="submit" class="btn btn-block btn-secondary mr-3 ml-3 w-80">
         </div>
     </form>
 </div>
