--- a/ui/templates/results.html
+++ b/ui/templates/results.html
@@ -1,30 +1,53 @@
+{% extends 'index.html' %}
 
-{% if "error" in search_results %}
+{% block results %}
 
-    <h2 class="col-*-12 w-100 text-center" title="{{ search_results["error"]["reason"] }}">{{ search_results["error"]["text"] }}</h2>
+    <div class="container my-2">
 
-{% else %}
+        <div class="row w-100" id="graph-container">
+            {% include 'graph.html' %}
+        </div>
+        
+        <div class="row my-5 py-2 w-100" >
+            {% if "error" in search_results %}
 
-    {% for political_leaning, results in search_results.items() %}
+                <h2 class="col-*-12 w-100 text-center" title="{{ search_results["error"]["reason"] }}">{{ search_results["error"]["text"] }}</h2>
 
-        <div class="col-xs-12 col-md-4">
-            <h5 class="text-center border-secondary border-bottom mt-1">{{ political_leaning.title() }}</h5>
+            {% else %}
 
-            {% for article in results %}
-                <div class="thumbnail article">
-                    <h3>{{ article["source"]["name"] }}</h3>
-                    <h5 class="article-title">{{ article["title"] }}</h5>
-                    <a href="{{ article['url'] }}">
-                        <img class="article-image img-fluid float-left"  src="{{ article['urlToImage'] }}"></a>
-                    <div class="caption">
-                        <p class="description">{{ article["description"] }}</p>
-                        <p>{{ article["publishedAt"].replace("T", " ").replace("Z", "") }}</p>
+                {% for political_leaning, results in search_results.items() %}
+
+                    <div class="col-xs-12 col-md-4">
+                        <h5 class="text-center border-secondary border-bottom mt-1">{{ political_leaning.title() }}</h5>
+
+                        {% for article in results %}
+                            <div class="thumbnail article">
+                                <h3>{{ article["source"]["name"] }}</h3>
+                                <h5 class="article-title">{{ article["title"] }}</h5>
+                                <a href="{{ article['url'] }}">
+                                    <img class="article-image img-fluid float-left"  src="{{ article['urlToImage'] }}"></a>
+                                <div class="caption">
+                                    <p class="description">{{ article["description"] }}</p>
+                                    <p>{{ article["publishedAt"].replace("T", " ").replace("Z", "") }}</p>
+                                </div>
+                            </div>
+                        {% endfor %}
+
                     </div>
-                </div>
-            {% endfor %}
+
+                {% endfor %}
+
+            {% endif %}
 
         </div>
+    </div>
 
-    {% endfor %}
+{% endblock %}
 
-{% endif %}
+
+{% block footer %}
+    <script src="{{ url_for('static', filename='js/d3.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/graph.js') }}"></script>
+{% endblock %}
+
+
