fix wrong variable name

--- a/ui/templates/graph.html
+++ b/ui/templates/graph.html
@@ -6,7 +6,7 @@
     </div>
 </div>
 <script type="application/json" id="graph-data">
-    {{ data | tojson }}
+    {{ graph | tojson }}
 </script>
 <div class="modal" id="modal">
     <div class="modal-content">
